--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGO_URI = mongodb+srv://devpriyostudent_db_user:done1404@tra-cont.n6uzr1v.mongodb.net/test
 JWT_SECRET=supersecretkey
+RAZORPAY_KEY_ID=your_razorpay_key_id_here
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret_here
+RAZORPAY_WEBHOOK_SECRET=your_webhook_secret_here
