--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "backend",
   "version": "1.0.0",
   "description": "Traffic Control & Fleet Monitoring Backend",
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
