--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
+    "gsap": "^3.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
